src/main/java/com/example/beliemeserver/error/exception/BadRequestException.java
package com.example.beliemeserver.error.exception;

import com.example.beliemeserver.error.info.CommonErrorInfo;

public class BadRequestException extends ServerException {
    public BadRequestException() {
        super(CommonErrorInfo.BAD_REQUEST);
    }
}
